<resources>
    <string name="app_name">Smart Parking</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">273518476513144</string>
    <string name="fb_login_protocol_scheme">fb273518476513144</string>
    <string name="prompt_email">Email</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">1NbZ1zCC3gX48Bea5bhUnSJBq</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">VNDFa2uUPB8DeB8kEIkOX1fA4l6z4P7vrxSCWNkjzzpI74nzeb</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="click_here_to_reset_password"><u>Forgot password? Press here</u></string>
    <string name="click_here_to_sign_up"><u>Click here to sign up</u></string>

    <string-array name="android_dropdown_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_compatibility">Compatibility Section</string>
    <string name="title_settings">Settings</string>
    <string name="gps_not_enabled">GPS not enabled</string>
    <string name="network_not_enabled">Network not enabled</string>
    <string name="open_location_settings">Open the location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string-array name="Parking_Categories">
        <item>Parking Category</item>
        <item>Shopping Mall</item>
        <item>Education Area</item>
        <item>Govt Area</item>
        <item>Recreational Area</item>
        <item>Hospital</item>
        <item>Food Place</item>
    </string-array>
    <string-array name="Reservation_Time">
        <item>Choose Time</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Sign Out</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_home__screen">Home_Screen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
