<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ehsan.safeparking.Profile">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bgm"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Profile"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="#cccccc">

            <EditText
                android:id="@+id/fullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:text="Ehsan latif"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="#cccccc">

            <EditText
                android:id="@+id/userEmailId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:text="ehsanlatif@gmail.com"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="#cccccc">

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/mobileNumber"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:text="0333-1520222"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="#cccccc">

            <EditText
                android:id="@+id/Car"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/com_facebook_button_like_icon_selected"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="Registered Car"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:text="LEM 14 1235"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <Button
            android:id="@+id/UpdateBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="Update"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

</FrameLayout>
